--- a/style.css
+++ b/style.css
@@ -24,11 +24,42 @@ div.lang {
   border-radius: 10px;
 }
 
+h1 {
+  margin-top: 0;
+  padding-top: 10px;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
 div.main {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
 }
+
+
+.loader {
+    margin-top: 10px;
+    border: 7px solid #f3f3f3; /* Light grey */
+    border-top: 7px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.loader2 {
+ border-top: 7px solid #3498db;
+ border-bottom: 7px solid #3498db;
+}
+
 
 
 .tooltip {
