--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,35 @@ div.main {
 }
 
 
+html {
+  height:100%;
+}
+
+body {
+  min-height:100%;
+  padding:0;
+  margin:0;
+  position:relative;
+}
+
+body::after{
+  content:'';
+  display:block;
+  height:100px;
+}
+
+div.footer {
+  position:absolute;
+  bottom:0;
+  width:100%;
+  height:50px;
+}
+
+p.footer {
+  text-align: center;
+}
+
+
 
 .tooltip {
   margin: 10px;
